@startuml
title EcoRide System Class Diagram

package com.K2600143.ecoride {

    class K2600143_Car {
        - carId : String
        - model : String
        - category : String
        - dailyRate : double
        - availability : String

        + setCarId(carId : String) : void
        + setModel(model : String) : void
        + setCategory(category : String) : void
        + setDailyRate(dailyRate : double) : void
        + setAvailability(availability : String) : void

        + getCarId() : String
        + getModel() : String
        + getCategory() : String
        + getDailyRate() : double
        + getAvailability() : String

        + updateAvailability(status : String) : void
        + getDetails() : String
    }

    class K2600143_Customer {
        - nicOrPassport : String
        - name : String
        - contact : String
        - email : String

        + setNicOrPassport(nicOrPassport : String) : void
        + setName(name : String) : void
        + setContact(contact : String) : void
        + setEmail(email : String) : void

        + getName() : String
        + displayInfo() : void
    }

    class K2600143_Reservation {
        - String reservationId
        - K2600143_Customer customer
        - K2600143_Car car
        - LocalDate startDate
        - LocalDate endDate
        - double totalKm
        - double deposit = 5000

        + K2600143_Reservation(String reservationId, K2600143_Customer customer, K2600143_Car car,
                               LocalDate startDate, LocalDate endDate, double totalKm)
        + long calculateDays()
        + K2600143_Customer getCustomer()
        + K2600143_Car getCar()
        + double getDeposit()
    }


    class K2600143_Invoice {
        - K2600143_Reservation reservation
        - double basePrice
        - double discount
        - double tax
        - double finalAmount

        + K2600143_Invoice(K2600143_Reservation reservation)
        + void calculateInvoice()
        + void printInvoice()
    }

    class K2600143_EcoRideSystem {
        - ArrayList<K2600143_Car> cars
        - ArrayList<K2600143_Customer> customers
        - ArrayList<K2600143_Reservation> reservations

        + void addCar(K2600143_Car car)
        + void makeReservation(String id, K2600143_Customer cust, K2600143_Car car,
                               LocalDate start, LocalDate end, double km)
        + static void main(String[] args)
    }

    ' --- Relationships ---
    K2600143_Reservation --> K2600143_Customer : has
    K2600143_Reservation --> K2600143_Car : has
    K2600143_Invoice --> K2600143_Reservation : based on
    K2600143_EcoRideSystem --> K2600143_Car : manages
    K2600143_EcoRideSystem --> K2600143_Customer : manages
    K2600143_EcoRideSystem --> K2600143_Reservation : manages
}

@enduml
